Try to apply DE-NISkA's patches

--- a/prebuilt/spica/audio/asound.conf
+++ b/prebuilt/spica/audio/asound.conf
@@ -1,27 +1,25 @@
 # Android ALSA configuration file for the AK4671 audio.
-
-
 ########################################################################
-#			{name "Playback Path"	value 2}	# 0:OFF 1:RCV 2:SPK 
-#												# 3:HP  4:BT
-#			{name "Output Volume"	value 30}	# min:0 max:48
-#			{name "Output Volume - RCV"	value 2}# min:0 max:7
-#			{name "Output Volume - SPK/EAR"	value 8} # min:0 max:15
-#			{name "MIC Path"		value 1} 	# 0:Main Mic 1:Sub MIC
-#			{name "Voice Call Path"	value 1}	# 0:OFF 1:RCV 2:SPK
-#												# 3:HP  4:BT
-#			{name "Voice Memo Path"	value 1}	# 0:OFF 1:MAIN 2:SUB
-#												# 3:EAR 4:BT
-#			{name "MIC Gain"		value 5,5}	# min:0 max:15
-#			{name "FM Radio Path"	value 1}	# 0:off 1:RCV 2:SPK
-#												# 3:HP 4:BT
-#			{name "Idle Mode"	value 1}		# 0:off 1:on
+# Mixer controls:
+# {name "Output Volume L"         value 24          } #integer range 0 - 48
+# {name "Output Volume R"         value 24          } #integer range 0 - 48
+# {name "Output Volume - RCV"     value 5           } #integer range 0 - 7
+# {name "Output Volume - SPK/EAR" value 12          } #integer range 0 - 15
+# {name "Output Volume - MUTE"    value false       } #boolean
+# {name "Playback Path"           value "SPK"       } #enumerated: "Off" "RCV" "SPK" "HP" "BT" "SPK_HP" "R_SPK_HP" 
+# {name "Voice Call Path"         value "Off"       } #enumerated: "Off" "RCV" "SPK" "HP" "BT" "SPK_LOOP" 
+# {name "Voice Memo Path"         value "Off"       } #enumerated: "Off" "MAIN" "SUB" "EAR" "BT" 
+# {name "MIC Path"                value "Main Mic"  } #enumerated: "Main Mic" "Sub Mic"
+# {name "MIC Gain"                value [5 5]       } #integer count 2 range "0 - 15"
+# {name "FM Radio Path"           value "Off"       } #enumerated: "Off" "RCV" "SPK" "HP" "BT" 
+# {name "Idle Mode"               value "Off"       } #enumerated: "Off" "ON" 
+# {name "Voice Call Rec Mode"     value "Off"       } #enumerated: "Off" "ON" 
+# {name "External Amp Power"      value "Off"       } #enumerated: "Off" "ON" 
+# {name "Voice Call Auto Response Mode" value "Off" } #enumerated: "Off" "ON" 
+#
+# Rest of the file should be written based on this values
 #########################################################################
-
-
-##
-## Mixer Devices
-##
+## Devices ##
 
 ctl.AndroidOut {
 	type hw
@@ -33,424 +31,296 @@ ctl.AndroidIn {
 	card 0
 }
 
+pcm.play {
+	type hw
+	card 0
+	device 0
+}
+
+pcm.record {
+	type hw
+	card 0
+	device 0  ## should be equal with pcm.play???
+}
+######### FAKE PCMs WITH HOOKS FOR CHANGING MIXER CONTROLS: #########
+
+##
+## Idle control device
+##
+## !!!This device not described in alsa_spica.cpp!!!
+
+#pcm.AndroidOut_On_idle {
+#	type hooks
+#	slave.pcm "play"
+#	hooks.0 {
+#		type ctl_elems
+#		hook_args [
+#		{name "Idle Mode"	value "ON"}
+#		]
+#	}
+#}
+
+#pcm.AndroidOut_Off_idle {
+#	type hooks
+#	slave.pcm "play"
+#	hooks.0 {
+#		type ctl_elems
+#		hook_args [
+#		{name "Idle Mode"	value "Off"}
+#		]
+#	}
+#}
+
+#pcm.AndroidIn_On_idle {
+#	type hooks
+#	slave.pcm "record"
+#	hooks.0 {
+#		type ctl_elems
+#		hook_args [
+#		{name "Idle Mode"	value "ON"}
+#		]
+#	}
+#}
+
+#pcm.AndroidIn_Off_idle {
+#	type hooks
+#	slave.pcm "record"
+#	hooks.0 {
+#		type ctl_elems
+#		hook_args [
+#		{name "Idle Mode"	value "Off"}
+#		]
+#	}
+#}
 
 ##
 ## Playback Devices
 ##
 
+## Fallback device
 pcm.AndroidOut {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Idle Mode"	value 0}
 		]
 	}
 }
 
 pcm.AndroidOut_Earpiece {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "MIC Path"		value 0} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 1}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
+		{name "MIC Path"		value "Main Mic"}
+		{name "Voice Call Path"	value "RCV"     }
 		]
 	}
 }
 
 pcm.AndroidOut_Speaker {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 2}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "SPK"}
 		]
 	}
 }
 
 pcm.AndroidOut_Bluetooth {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 4}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "BT"}
 		]
 	}
 }
 
 pcm.AndroidOut_Headset {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 3}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "HP"}
 		]
 	}
 }
 
 pcm.AndroidOut_Earpiece_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "MIC Path"		value 0} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 1}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
+		{name "MIC Path"		value "Main Mic"}
+		{name "Voice Call Path"	value "RCV"     }
 		]
 	}
 }
 
 pcm.AndroidOut_Speaker_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 2}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"        value "SPK"}
 		]
 	}
 }
 
 pcm.AndroidOut_Speaker_Headset_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 5}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT  5:SPKHP
+		{name "Playback Path"	value "SPK_HP"}
 		]
 	}
 }
 
 pcm.AndroidOut_Bluetooth_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 4}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "BT"}
 		]
 	}
 }
 
 pcm.AndroidOut_Headset_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 3}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "HP"}
 		]
 	}
 }
 
 pcm.AndroidOut_Earpiece_ringtone {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 2}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "SPK"}
 		]
 	}
 }
 
 pcm.AndroidOut_Speaker_ringtone {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 2}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "SPK"}
 		]
 	}
 }
 
 pcm.AndroidOut_Speaker_Headset_ringtone {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 5}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT  5:SPKHP
+		{name "Playback Path"	value "SPK_HP"}
 		]
 	}
 }
 
 pcm.AndroidOut_Bluetooth_ringtone {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 4}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "BT"}
 		]
 	}
 }
 
 pcm.AndroidOut_Headset_ringtone {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Playback Path"	value 3}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
+		{name "Playback Path"	value "HP"}
 		]
 	}
 }
 
 pcm.AndroidOut_Earpiece_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "MIC Path"		value 0} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 1}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
+		{name "MIC Path"		value "Main Mic"}
+		{name "Voice Call Path"	value "RCV"     }
 		]
 	}
 }
 
 pcm.AndroidOut_Speaker_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "MIC Path"		value 1} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 2}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
+		{name "MIC Path"		value "Sub Mic"}
+		{name "Voice Call Path"	value "SPK"    }
 		]
 	}
 }
 
 pcm.AndroidOut_Speaker_Headset_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "MIC Path"		value 1} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 2}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
+		{name "MIC Path"		value "Sub Mic"}
+		{name "Voice Call Path"	value "SPK"    }
 		]
 	}
 }
 
 pcm.AndroidOut_Bluetooth_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Voice Call Path"	value 4}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
+		{name "Voice Call Path"	value "BT"}
 		]
 	}
 }
 
 pcm.AndroidOut_Headset_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "Voice Call Path"	value 3}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
+		{name "Voice Call Path"	value "HP"}
 		]
 	}
 }
-
-
-##
-## Idle control device
-##
-
-pcm.AndroidOut_On_idle {
-	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-			# Enable audio output from the DSP
-			{name "Idle Mode"	value 1}	# off:0 on:1
-		]
-	}
-}
-
-pcm.AndroidOut_Off_idle {
-	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-			# Enable audio output from the DSP
-			{name "Idle Mode"	value 0}	# off:0 on:1
-		]
-	}
-}
-
-pcm.AndroidIn_On_idle {
-	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-			# Enable audio output from the DSP
-			{name "Idle Mode"	value 1}	# off:0 on:1
-		]
-	}
-}
-
-pcm.AndroidIn_Off_idle {
-	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-			# Enable audio output from the DSP
-			{name "Idle Mode"	value 0}	# off:0 on:1
-		]
-	}
-}
-
 
 ##
 ## Recording device
@@ -458,256 +328,157 @@ pcm.AndroidIn_Off_idle {
 
 pcm.AndroidIn {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			{name "Idle Mode"	value 0}
-			{name "Voice Memo Path"	value 1}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
-		]
-	}
-}
-
-pcm.AndroidIn_Microphone {
-	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-			{name "Voice Memo Path"	value 1}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
 		]
 	}
 }
 
 pcm.AndroidIn_Earpiece_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			{name "Playback Path"	value 1}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 1}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		{name "Playback Path"	value "RCV" }
+		{name "Voice Memo Path"	value "MAIN"}
 		]
 	}
 }
 
 pcm.AndroidIn_Speaker_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			{name "Playback Path"	value 2}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 2}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		{name "Playback Path"	value "SPK"}
+		{name "Voice Memo Path"	value "SUB"}
 		]
 	}
 }
 
 pcm.AndroidIn_Speaker_ringtone {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-		{name "Playback Path"	value 2}	# 0:OFF 1:RCV 2:SPK 
-											# 3:HP  4:BT
+		{name "Playback Path"	value "SPK"}
 		]
 	}
 }
 
 pcm.AndroidIn_Headset_ringtone {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-		{name "Playback Path"	value 3}	# 0:OFF 1:RCV 2:SPK 
-											# 3:HP  4:BT
+		{name "Playback Path"	value "HP"}
 		]
 	}
 }
 
 pcm.AndroidIn_Speaker_Headset_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			{name "Playback Path"	value 5}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT  5:SPKHP
-			{name "Voice Memo Path"	value 3}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		{name "Playback Path"	value "SPK_HP"}
+		{name "Voice Memo Path"	value "EAR"   }
 		]
 	}
 }
 
 pcm.AndroidIn_Bluetooth_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			{name "Playback Path"	value 4}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 4}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		{name "Playback Path"	value "BT"}
+		{name "Voice Memo Path"	value "BT"}
 		]
 	}
 }
 
 pcm.AndroidIn_Headset_normal {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio capture"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			{name "Playback Path"	value 3}	# 0:OFF 1:RCV 2:SPK 
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 3}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		{name "Playback Path"	value "HP" }
+		{name "Voice Memo Path"	value "EAR"}
 		]
 	}
 }
 
 pcm.AndroidIn_Earpiece_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "MIC Path"		value 0} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 1}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 1}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		{name "MIC Path"		value "Main Mic"}
+		{name "Voice Call Path"	value "RCV"     }
+		{name "Voice Memo Path"	value "MAIN"    }
 		]
 	}
 }
 
 pcm.AndroidIn_Speaker_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			{name "MIC Path"		value 1} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 2}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 2}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		{name "MIC Path"		value "Sub Mic"}
+		{name "Voice Call Path"	value "SPK"    }
+		{name "Voice Memo Path"	value "SUB"    }
 		]
 	}
 }
 
 pcm.AndroidIn_Speaker_Headset_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			#{name "MIC Path"		value 1} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 3}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 3}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		#{name "MIC Path"		value "Sub Mic"}
+		{name "Voice Call Path"	value "HP"    }
+		{name "Voice Memo Path"	value "EAR"   }
 		]
 	}
 }
 
 pcm.AndroidIn_Bluetooth_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			#{name "MIC Path"		value 1} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 4}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 4}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		#{name "MIC Path"		value "Sub Mic"}
+		{name "Voice Call Path"	value "BT"    }
+		{name "Voice Memo Path"	value "BT"    }
 		]
 	}
 }
 
 pcm.AndroidIn_Headset_incall {
 	type hooks
-	slave.pcm {
-		type hw
-		card 0
-		device 0	# Must be of type "digital audio playback"
-	}
+	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-			# Enable audio output from the DSP
-			#{name "MIC Path"		value 1} 	# 0:Main Mic 1:Sub MIC
-			{name "Voice Call Path"	value 3}	# 0:OFF 1:RCV 2:SPK
-												# 3:HP  4:BT
-			{name "Voice Memo Path"	value 3}	# 0:OFF 1:MAIN 2:SUB
-												# 3:EAR 4:BT
+		#{name "MIC Path"		value "Sub Mic"}
+		{name "Voice Call Path"	value "HP"    }
+		{name "Voice Memo Path"	value "EAR"   }
 		]
 	}
 }
-
