DE-NISkA's patch

--- a/prebuilt/spica/audio/asound.conf
+++ b/prebuilt/spica/audio/asound.conf
@@ -45,55 +45,6 @@ pcm.record {
 ######### FAKE PCMs WITH HOOKS FOR CHANGING MIXER CONTROLS: #########
 
 ##
-## Idle control device
-##
-## !!!This device not described in alsa_spica.cpp!!!
-
-#pcm.AndroidOut_On_idle {
-#	type hooks
-#	slave.pcm "play"
-#	hooks.0 {
-#		type ctl_elems
-#		hook_args [
-#		{name "Idle Mode"	value "ON"}
-#		]
-#	}
-#}
-
-#pcm.AndroidOut_Off_idle {
-#	type hooks
-#	slave.pcm "play"
-#	hooks.0 {
-#		type ctl_elems
-#		hook_args [
-#		{name "Idle Mode"	value "Off"}
-#		]
-#	}
-#}
-
-#pcm.AndroidIn_On_idle {
-#	type hooks
-#	slave.pcm "record"
-#	hooks.0 {
-#		type ctl_elems
-#		hook_args [
-#		{name "Idle Mode"	value "ON"}
-#		]
-#	}
-#}
-
-#pcm.AndroidIn_Off_idle {
-#	type hooks
-#	slave.pcm "record"
-#	hooks.0 {
-#		type ctl_elems
-#		hook_args [
-#		{name "Idle Mode"	value "Off"}
-#		]
-#	}
-#}
-
-##
 ## Playback Devices
 ##
 
@@ -153,18 +104,7 @@ pcm.AndroidOut_Headset {
 	}
 }
 
-pcm.AndroidOut_Earpiece_normal {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "MIC Path"		value "Main Mic"}
-		{name "Voice Call Path"	value "RCV"     }
-		]
-	}
-}
-
+## Speaker ###############################################################
 pcm.AndroidOut_Speaker_normal {
 	type hooks
 	slave.pcm "play"
@@ -176,50 +116,6 @@ pcm.AndroidOut_Speaker_normal {
 	}
 }
 
-pcm.AndroidOut_Speaker_Headset_normal {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "SPK_HP"}
-		]
-	}
-}
-
-pcm.AndroidOut_Bluetooth_normal {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "BT"}
-		]
-	}
-}
-
-pcm.AndroidOut_Headset_normal {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "HP"}
-		]
-	}
-}
-
-pcm.AndroidOut_Earpiece_ringtone {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "SPK"}
-		]
-	}
-}
-
 pcm.AndroidOut_Speaker_ringtone {
 	type hooks
 	slave.pcm "play"
@@ -227,51 +123,6 @@ pcm.AndroidOut_Speaker_ringtone {
 		type ctl_elems
 		hook_args [
 		{name "Playback Path"	value "SPK"}
-		]
-	}
-}
-
-pcm.AndroidOut_Speaker_Headset_ringtone {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "SPK_HP"}
-		]
-	}
-}
-
-pcm.AndroidOut_Bluetooth_ringtone {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "BT"}
-		]
-	}
-}
-
-pcm.AndroidOut_Headset_ringtone {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "HP"}
-		]
-	}
-}
-
-pcm.AndroidOut_Earpiece_incall {
-	type hooks
-	slave.pcm "play"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "MIC Path"		value "Main Mic"}
-		{name "Voice Call Path"	value "RCV"     }
 		]
 	}
 }
@@ -288,14 +139,107 @@ pcm.AndroidOut_Speaker_incall {
 	}
 }
 
-pcm.AndroidOut_Speaker_Headset_incall {
+## Earpiece ###############################################################
+pcm.AndroidOut_Earpiece_normal {
 	type hooks
 	slave.pcm "play"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-		{name "MIC Path"		value "Sub Mic"}
-		{name "Voice Call Path"	value "SPK"    }
+		{name "MIC Path"		value "Main Mic"}
+		{name "Voice Call Path"	value "RCV"     }
+		]
+	}
+}
+
+pcm.AndroidOut_Earpiece_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "SPK"}
+		]
+	}
+}
+
+pcm.AndroidOut_Earpiece_incall {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "MIC Path"		value "Main Mic"}
+		{name "Voice Call Path"	value "RCV"     }
+		]
+	}
+}
+
+pcm.AndroidOut_Earpiece_Speaker_incall {
+    type hooks
+    slave.pcm "play"
+    hooks.0 {
+        type ctl_elems
+        hook_args [
+        {name "MIC Path" value "Sub Mic"}
+        {name "Voice Call Path" value "SPK" }
+        ]
+    }
+} 
+## Speaker_Headset ###############################################################
+#pcm.AndroidOut_Speaker_Headset_normal {
+#	type hooks
+#	slave.pcm "play"
+#	hooks.0 {
+#		type ctl_elems
+#		hook_args [
+#		{name "Playback Path"	value "SPK_HP"}
+#		]
+#	}
+#}
+#
+#pcm.AndroidOut_Speaker_Headset_ringtone {
+#	type hooks
+#	slave.pcm "play"
+#	hooks.0 {
+#		type ctl_elems
+#		hook_args [
+#		{name "Playback Path"	value "SPK_HP"}
+#		]
+#	}
+#}
+#
+#pcm.AndroidOut_Speaker_Headset_incall {
+#	type hooks
+#	slave.pcm "play"
+#	hooks.0 {
+#		type ctl_elems
+#		hook_args [
+#		{name "MIC Path"		value "Sub Mic"}
+#		{name "Voice Call Path"	value "SPK"    }
+#		]
+#	}
+#}
+
+## Bluetooth ###############################################################
+pcm.AndroidOut_Bluetooth_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
 		]
 	}
 }
@@ -307,6 +251,29 @@ pcm.AndroidOut_Bluetooth_incall {
 		type ctl_elems
 		hook_args [
 		{name "Voice Call Path"	value "BT"}
+		]
+	}
+}
+
+## Headset ###############################################################
+pcm.AndroidOut_Headset_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "HP"}
+		]
+	}
+}
+
+pcm.AndroidOut_Headset_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "HP"}
 		]
 	}
 }
@@ -326,6 +293,7 @@ pcm.AndroidOut_Headset_incall {
 ## Recording device
 ##
 
+## Fallback device #########################################################################
 pcm.AndroidIn {
 	type hooks
 	slave.pcm "record"
@@ -336,37 +304,13 @@ pcm.AndroidIn {
 	}
 }
 
-pcm.AndroidIn_Earpiece_normal {
+## Headset #################################################################################
+pcm.AndroidIn_Headset_normal {
 	type hooks
 	slave.pcm "record"
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-		{name "Playback Path"	value "RCV" }
-		{name "Voice Memo Path"	value "MAIN"}
-		]
-	}
-}
-
-pcm.AndroidIn_Speaker_normal {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "SPK"}
-		{name "Voice Memo Path"	value "SUB"}
-		]
-	}
-}
-
-pcm.AndroidIn_Speaker_ringtone {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "SPK"}
 		]
 	}
 }
@@ -377,95 +321,6 @@ pcm.AndroidIn_Headset_ringtone {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-		{name "Playback Path"	value "HP"}
-		]
-	}
-}
-
-pcm.AndroidIn_Speaker_Headset_normal {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "SPK_HP"}
-		{name "Voice Memo Path"	value "EAR"   }
-		]
-	}
-}
-
-pcm.AndroidIn_Bluetooth_normal {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "BT"}
-		{name "Voice Memo Path"	value "BT"}
-		]
-	}
-}
-
-pcm.AndroidIn_Headset_normal {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "Playback Path"	value "HP" }
-		{name "Voice Memo Path"	value "EAR"}
-		]
-	}
-}
-
-pcm.AndroidIn_Earpiece_incall {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "MIC Path"		value "Main Mic"}
-		{name "Voice Call Path"	value "RCV"     }
-		{name "Voice Memo Path"	value "MAIN"    }
-		]
-	}
-}
-
-pcm.AndroidIn_Speaker_incall {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		{name "MIC Path"		value "Sub Mic"}
-		{name "Voice Call Path"	value "SPK"    }
-		{name "Voice Memo Path"	value "SUB"    }
-		]
-	}
-}
-
-pcm.AndroidIn_Speaker_Headset_incall {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		#{name "MIC Path"		value "Sub Mic"}
-		{name "Voice Call Path"	value "HP"    }
-		{name "Voice Memo Path"	value "EAR"   }
-		]
-	}
-}
-
-pcm.AndroidIn_Bluetooth_incall {
-	type hooks
-	slave.pcm "record"
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-		#{name "MIC Path"		value "Sub Mic"}
-		{name "Voice Call Path"	value "BT"    }
-		{name "Voice Memo Path"	value "BT"    }
 		]
 	}
 }
@@ -476,9 +331,100 @@ pcm.AndroidIn_Headset_incall {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
-		#{name "MIC Path"		value "Sub Mic"}
-		{name "Voice Call Path"	value "HP"    }
-		{name "Voice Memo Path"	value "EAR"   }
 		]
 	}
 }
+## Bluetooth #################################################################################
+pcm.AndroidIn_Bluetooth_normal {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		]
+	}
+}
+
+pcm.AndroidIn_Bluetooth_ringtone {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		]
+	}
+}
+
+pcm.AndroidIn_Bluetooth_incall {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		]
+	}
+}
+
+### Voice Call #################################################################################
+pcm.AndroidIn_Voice_normal {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		]
+	}
+}
+
+pcm.AndroidIn_Voice_ringtone {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		]
+	}
+}
+
+pcm.AndroidIn_Voice_incall {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		]
+	}
+}
+## Microphone #################################################################################
+pcm.AndroidIn_Microphone_normal {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+        {name "MIC Path"		value "Sub Mic"}
+	   {name "Voice Memo Path" value "MAIN"}
+		]
+	}
+}
+
+pcm.AndroidIn_Microphone_ringtone {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		]
+	}
+}
+
+pcm.AndroidIn_Microphone_incall {
+	type hooks
+	slave.pcm "record"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		]
+	}
+}
+#######################################################################
