--- a/prebuilt/spica/audio/asound.conf
+++ b/prebuilt/spica/audio/asound.conf
@@ -187,39 +187,46 @@ pcm.AndroidOut_Earpiece_Speaker_incall {
     }
 } 
 ## Speaker_Headset ###############################################################
-#pcm.AndroidOut_Speaker_Headset_normal {
-#	type hooks
-#	slave.pcm "play"
-#	hooks.0 {
-#		type ctl_elems
-#		hook_args [
+## Temporary dirty hack
+pcm.AndroidOut_Speaker_Headset_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "HP"}
+# Dirty hack -- need to solve it
 #		{name "Playback Path"	value "SPK_HP"}
-#		]
-#	}
-#}
-#
-#pcm.AndroidOut_Speaker_Headset_ringtone {
-#	type hooks
-#	slave.pcm "play"
-#	hooks.0 {
-#		type ctl_elems
-#		hook_args [
+		]
+	}
+}
+
+pcm.AndroidOut_Speaker_Headset_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "HP"}
+# Dirty hack -- need to solve it
 #		{name "Playback Path"	value "SPK_HP"}
-#		]
-#	}
-#}
-#
-#pcm.AndroidOut_Speaker_Headset_incall {
-#	type hooks
-#	slave.pcm "play"
-#	hooks.0 {
-#		type ctl_elems
-#		hook_args [
+		]
+	}
+}
+
+pcm.AndroidOut_Speaker_Headset_incall {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Voice Call Path"	value "HP"    }
+# Dirty hack -- need to solve it
 #		{name "MIC Path"		value "Sub Mic"}
 #		{name "Voice Call Path"	value "SPK"    }
-#		]
-#	}
-#}
+		]
+	}
+}
 
 ## Bluetooth ###############################################################
 pcm.AndroidOut_Bluetooth_normal {
