Add some sound source (DE-NISkA)

--- a/prebuilt/spica/audio/asound.conf
+++ b/prebuilt/spica/audio/asound.conf
@@ -228,8 +228,8 @@ pcm.AndroidOut_Speaker_Headset_incall {
 	}
 }
 
-## Bluetooth ###############################################################
-pcm.AndroidOut_Bluetooth_normal {
+## Bluetooth-SCO ###########################################################
+pcm.AndroidOut_Bluetooth-SCO_normal {
 	type hooks
 	slave.pcm "play"
 	hooks.0 {
@@ -240,7 +240,7 @@ pcm.AndroidOut_Bluetooth_normal {
 	}
 }
 
-pcm.AndroidOut_Bluetooth_ringtone {
+pcm.AndroidOut_Bluetooth-SCO_ringtone {
 	type hooks
 	slave.pcm "play"
 	hooks.0 {
@@ -251,7 +251,177 @@ pcm.AndroidOut_Bluetooth_ringtone {
 	}
 }
 
-pcm.AndroidOut_Bluetooth_incall {
+pcm.AndroidOut_Bluetooth-SCO_incall {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Voice Call Path"	value "BT"}
+		]
+	}
+}
+
+## Bluetooth-SCO-Headset ###################################################
+pcm.AndroidOut_Bluetooth-SCO-Headset_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-SCO-Headset_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-SCO-Headset_incall {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Voice Call Path"	value "BT"}
+		]
+	}
+}
+
+## Bluetooth-SCO-Carkit ####################################################
+pcm.AndroidOut_Bluetooth-SCO-Carkit_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-SCO-Carkit_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-SCO-Carkit_incall {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Voice Call Path"	value "BT"}
+		]
+	}
+}
+
+## Bluetooth-A2DP ##########################################################
+pcm.AndroidOut_Bluetooth-A2DP_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-A2DP_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-A2DP_incall {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Voice Call Path"	value "BT"}
+		]
+	}
+}
+
+## Bluetooth-A2DP-Headphone ################################################
+pcm.AndroidOut_Bluetooth-A2DP-Headphone_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-A2DP-Headphone_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-A2DP-Headphone_incall {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Voice Call Path"	value "BT"}
+		]
+	}
+}
+
+## Bluetooth-A2DP-Speaker ##################################################
+pcm.AndroidOut_Bluetooth-A2DP-Speaker_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-A2DP-Speaker_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "BT"}
+		]
+	}
+}
+
+pcm.AndroidOut_Bluetooth-A2DP-Speaker_incall {
 	type hooks
 	slave.pcm "play"
 	hooks.0 {
@@ -286,6 +456,40 @@ pcm.AndroidOut_Headset_ringtone {
 }
 
 pcm.AndroidOut_Headset_incall {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Voice Call Path"	value "HP"}
+		]
+	}
+}
+
+## Headphone ############################################################
+pcm.AndroidOut_Headphone_normal {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "HP"}
+		]
+	}
+}
+
+pcm.AndroidOut_Headphone_ringtone {
+	type hooks
+	slave.pcm "play"
+	hooks.0 {
+		type ctl_elems
+		hook_args [
+		{name "Playback Path"	value "HP"}
+		]
+	}
+}
+
+pcm.AndroidOut_Headphone_incall {
 	type hooks
 	slave.pcm "play"
 	hooks.0 {
