--- a/prebuilt/spica/audio/asound.conf
+++ b/prebuilt/spica/audio/asound.conf
@@ -522,6 +522,8 @@ pcm.AndroidIn_Headset_normal {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "Playback Path"	value "HP"} 
+			{name "Voice Memo Path"	value "EAR"} 
 		]
 	}
 }
@@ -532,6 +534,8 @@ pcm.AndroidIn_Headset_ringtone {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "Playback Path"	value "HP"} 
+			{name "Voice Memo Path"	value "EAR"} 
 		]
 	}
 }
@@ -542,9 +546,12 @@ pcm.AndroidIn_Headset_incall {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "Playback Path"	value "HP"} 
+			{name "Voice Memo Path"	value "EAR"} 
 		]
 	}
 }
+
 ## Bluetooth #################################################################################
 pcm.AndroidIn_Bluetooth_normal {
 	type hooks
@@ -552,6 +559,8 @@ pcm.AndroidIn_Bluetooth_normal {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "Playback Path"	value "BT"}  
+			{name "Voice Memo Path" value "BT"}
 		]
 	}
 }
@@ -562,6 +571,8 @@ pcm.AndroidIn_Bluetooth_ringtone {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "Playback Path"	value "BT"}  
+			{name "Voice Memo Path" value "BT"}
 		]
 	}
 }
@@ -572,6 +583,8 @@ pcm.AndroidIn_Bluetooth_incall {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "Playback Path"	value "BT"}  
+			{name "Voice Memo Path" value "BT"}
 		]
 	}
 }
@@ -583,6 +596,8 @@ pcm.AndroidIn_Voice_normal {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "MIC Path"		value "Sub Mic"}
+			{name "Voice Call Path"	value "SPK"    }
 		]
 	}
 }
@@ -593,6 +608,8 @@ pcm.AndroidIn_Voice_ringtone {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "MIC Path"		value "Sub Mic"}
+			{name "Voice Call Path"	value "SPK"    }
 		]
 	}
 }
@@ -603,6 +620,8 @@ pcm.AndroidIn_Voice_incall {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+			{name "MIC Path"		value "Sub Mic"}
+			{name "Voice Call Path"	value "SPK"    }
 		]
 	}
 }
@@ -625,6 +644,8 @@ pcm.AndroidIn_Microphone_ringtone {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+        {name "MIC Path"		value "Sub Mic"}
+	   {name "Voice Memo Path" value "MAIN"}
 		]
 	}
 }
@@ -635,6 +656,8 @@ pcm.AndroidIn_Microphone_incall {
 	hooks.0 {
 		type ctl_elems
 		hook_args [
+        {name "MIC Path"		value "Sub Mic"}
+	   {name "Voice Memo Path" value "MAIN"}
 		]
 	}
 }
